<resources>
    <string name="app_name">Hours Tacker</string>
    <string name="enter_name">Enter Your Name:</string>
    <string name="name_hint">John Smith</string>
    <string name="enter_birthday">Enter Your Birthday:</string>
    <string name="birthday_hint">DD_MM_YYYY</string>
    <string name="submit">Submit</string>
    <string name="enter_company_name">Enter Company Name:</string>
    <string name="company_name_hint">Google</string>
    <string name="enter_job_title">Enter Your Job Title:</string>
    <string name="job_title_hint">Computer Programmer</string>
    <string name="enter_your_wage">Enter Your Hourly Wage:</string>
    <string name="wage_hint">$33.50</string>
    <string name="welcome">Welcome to my Hour Tracker Application</string>
    <string name="create_user">Create a User!</string>
    <string name="job_list">Job List</string>
</resources>
